--- a/KoeBook/Views/SettingsPage.xaml
+++ b/KoeBook/Views/SettingsPage.xaml
@@ -56,6 +56,14 @@
                             Password="{x:Bind ViewModel.ApiKey, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"/>
                     </StackPanel>
                 </controls:SettingsCard>
+
+                <controls:SettingsCard
+                    Header="APIルート"
+                    Description="Style Bert VITS2 のAPIサーバーのオリジンを設定します">
+                    <TextBox
+                        MinWidth="600"
+                        Text="{x:Bind ViewModel.StyleBertVitsRoot, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"/>
+                </controls:SettingsCard>
             </StackPanel>
 
             <TextBlock
