URLバリデーションを追加

--- a/KoeBook/Views/MainPage.xaml
+++ b/KoeBook/Views/MainPage.xaml
@@ -54,11 +54,17 @@
                     </StackPanel>-->
 
                     <StackPanel>
-                        <TextBlock Text="青空文庫を読み上げる"/>
+                        <TextBlock Text="Webページを読み上げる (青空文庫のみ対応)"/>
                         <TextBox
                             Text="{x:Bind ViewModel.EbookUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             BeforeTextChanging="{x:Bind ViewModel.BeforeTextChanging}"
-                            Margin="{StaticResource XSmallTopMargin}" />
+                            Margin="{StaticResource XSmallTopMargin}"
+                            PlaceholderText="https://www.aozora.gr.jp/cards/000035/files/1567_14913.html"/>
+                        <TextBlock
+                            Visibility="{x:Bind ViewModel.ErrorTextVisibility, Mode=OneWay}"
+                            Text="青空文庫のURLを入力してください"
+                            Style="{ThemeResource CaptionTextBlockStyle}"
+                            Foreground="{ThemeResource SystemErrorTextColor}"/>
                     </StackPanel>
 
                     <Button
